package com.idvey.afya.models.groupe;

public enum GroupRole {

	MEMBER, MANAGER, RESPONSIBLE,

}
