classDiagram
    %% Classes principales
    class User {
        -Long id
        -String firstName
        -String lastName
        -String email
        -String password
        -String phoneNumber
        -LocalDate dateOfBirth
        -String profileImageUrl
        -Boolean isEmailVerified
        -LocalDateTime createdAt
        -LocalDateTime updatedAt
        +getFullName() String
        +updateProfile() void
        +changePassword() void
    }

    class Group {
        -Long id
        -String name
        -String description
        -String groupImageUrl
        -String qrCode
        -LocalDateTime createdAt
        -LocalDateTime updatedAt
        +addMember(User) void
        +removeMember(User) void
        +updateGroupInfo() void
    }

    class GroupMember {
        -Long id
        -GroupRole role
        -LocalDateTime joinedAt
        +assignRole(GroupRole) void
        +hasPermission(String) Boolean
    }

    class Medicine {
        -Long id
        -String name
        -String description
        -String barcode
        -String qrCode
        -String manufacturer
        -String activeIngredient
        -String dosageForm
        -String strength
        -String imageUrl
        +getDetails() String
        +validateBarcode() Boolean
    }

    class MyMedicine {
        -Long id
        -String customName
        -String notes
        -LocalDateTime addedAt
        +updateCustomInfo() void
    }

    class PharmacyBox {
        -Long id
        -String name
        -String description
        -String location
        -LocalDateTime createdAt
        +addMedicine(MyMedicine) void
        +removeMedicine(MyMedicine) void
        +getInventory() List~PurchaseHistory~
    }

    class MedicinePurchaseHistory {
        -Long id
        -Integer quantity
        -LocalDate purchaseDate
        -LocalDate expiryDate
        -Integer remainingQuantity
        -BigDecimal price
        -String reason
        -LocalDateTime createdAt
        +isExpired() Boolean
        +updateQuantity(Integer) void
        +calculateDaysUntilExpiry() Integer
    }

    class Treatment {
        -Long id
        -String name
        -String description
        -LocalDate startDate
        -LocalDate endDate
        -String status
        -LocalDateTime createdAt
        -LocalDateTime updatedAt
        +isActive() Boolean
        +addPrescription(Prescription) void
        +updateStatus() void
    }

    class Prescription {
        -Long id
        -String dosage
        -String frequency
        -Integer duration
        -String instructions
        -Integer totalDoses
        -Integer takenDoses
        -LocalDate startDate
        -LocalDate endDate
        -LocalDateTime createdAt
        +markDoseTaken() void
        +getRemainingDoses() Integer
        +isCompleted() Boolean
    }

    class Reminder {
        -Long id
        -String type
        -String title
        -String message
        -LocalDateTime scheduledTime
        -Boolean isSent
        -LocalDateTime sentAt
        +send() void
        +reschedule(LocalDateTime) void
    }

    class Disease {
        -Long id
        -String name
        -String description
        -String severity
        -LocalDate diagnosedDate
        +updateInfo() void
    }

    class GroupRole {
        <<enumeration>>
        MEMBER
        RESPONSIBLE
        MANAGER
    }

    %% Relations
    User "1" --> "0..*" GroupMember : has
    User "1" --> "0..*" MyMedicine : manages
    User "1" --> "0..*" Treatment : receives
    User "1" --> "0..*" Reminder : receives
    User "1" --> "0..*" Disease : has

    Group "1" --> "0..*" GroupMember : contains
    Group "1" --> "0..*" PharmacyBox : has
    Group "1" --> "0..*" Treatment : manages

    GroupMember "*" --> "1" User : belongs to
    GroupMember "*" --> "1" Group : member of
    GroupMember "*" --> "1" GroupRole : has

    Medicine "1" --> "0..*" MyMedicine : describes
    MyMedicine "1" --> "0..*" MedicinePurchaseHistory : tracks

    PharmacyBox "1" --> "0..*" MedicinePurchaseHistory : contains

    Treatment "1" --> "1..*" Prescription : includes
    Treatment "0..*" --> "1" User : prescribed to
    Treatment "0..*" --> "0..1" GroupMember : managed by

    Prescription "*" --> "1" MyMedicine : uses
    Prescription "1" --> "0..*" Reminder : triggers

    Reminder "*" --> "1" User : notifies

    Disease "0..*" --> "0..*" Treatment : treated by

    %% Notes
    note for User "Représente un utilisateur\nde l'application AFYA"
    note for Group "Groupe familial ou équipe\nde soins partagée"
    note for GroupRole "MEMBER: Accès basique\nRESPONSIBLE: Supervise\nMANAGER: Gestion complète"
    note for PharmacyBox "Contient l'inventaire des\nmédicaments du groupe"
